# Afterlights-core

./: .gitignore  README.md  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
agent/: data_processor_agent.py  function_schema_builder.py  model_context.py  test_agent_v2.py  test_mf_openai.py  util.py
agent/prompts/: dataset_processor.prompt
config/: local.yaml  local_gpu.yaml  project_config.yaml
dataset/: README.md
evaluation/: en_evaluation_generation.py  evaluate.py
examples/: cn_example_nazha_dataset.csv  en_example_ironman_dataset.csv
scripts/: evaluate.sh  retrieval_hosting.sh  retrieve.sh  train.sh
src/: api.py  config.py  file_util.py  retrieve.py  train.py
src/database/: connector.py  qdrant_controller.py
src/model_management/: embedding_model_controller.py
src/processor/: dataset_processor.py
src/retrieval/: base.py  cl_retrieve.py  contextual_retrieve.py  model_calling.py  retrieve_style.py  structured_csv_retrieve.py
src/retrieval/chunking_strategies/: neighbour_sim.py
src/training/: anchor_cl_mining.py  cl_training.py
tests/: chat_test.py  qdrant_controller_test.py  test_api.py
trained_model/: README.md
